--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "todo desc",
   "main": "gulpfile.babel.js",
   "directories": {
-    "doc": "docs"
+    "doc": "docs",
+    "packages": "jspm_packages"
   },
   "scripts": {
     "gulp": "node node_modules/gulp/bin/gulp.js",
-    "task": "node node_modules/gulp/bin/gulp.js",
+    "task": "node node_modules/gulp/bin/gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,18 +21,57 @@
     "kw"
   ],
   "author": "Joshua L Geschwendt",
+  "contributors": [
+    "Kate Dupon"
+  ],
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/kdupon/kdupon.github.io/issues"
   },
   "homepage": "https://github.com/kdupon/kdupon.github.io#readme",
   "devDependencies": {
+    "autoprefixer": "^6.1.2",
     "babel-core": "6.3.15",
     "babel-preset-es2015": "6.3.13",
+    "browser-sync": "^2.10.0",
     "del": "2.2.0",
+    "ejs": "^2.3.4",
+    "fs-extra": "^0.26.2",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-csso": "^1.0.1",
+    "gulp-debug": "^2.1.2",
     "gulp-file": "^0.2.0",
+    "gulp-flatten": "^0.2.0",
+    "gulp-footer": "^1.0.5",
     "gulp-gh-pages": "0.5.4",
-    "gulp-load-plugins": "1.1.0"
+    "gulp-header": "^1.7.1",
+    "gulp-load-plugins": "1.1.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-scss-lint": "^0.3.8",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "handlebars": "^4.0.5",
+    "jlg-toolkit": "geschwendt/jlg-toolkit",
+    "jspm": "^0.16.15",
+    "lodash": "^3.10.1",
+    "mq4-hover-shim": "^0.3.0",
+    "node-notifier": "^4.4.0",
+    "normalize.css": "^3.0.3",
+    "pesticide": "^1.3.1",
+    "semver": "^5.1.0",
+    "through2": "^2.0.0",
+    "yargs": "^3.31.0"
+  },
+  "jspm": {
+    "directories": {
+      "doc": "docs"
+    },
+    "configFile": "src/config.js",
+    "devDependencies": {
+      "typescript": "npm:typescript@^1.6.2"
+    }
   }
 }
