--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "kdupon.github.io",
   "version": "0.0.0",
   "description": "todo desc",
-  "main": "gulpfile.babel.js",
+  "main": "gulpfile.js",
   "directories": {
     "doc": "docs",
     "packages": "jspm_packages"
   },
   "scripts": {
+    "build:tools": "tsc --project tools",
+    "develop": "npm run build:gulp && npm start",
     "gulp": "node node_modules/gulp/bin/gulp.js",
-    "task": "node node_modules/gulp/bin/gulp",
+    "postinstall": "jspm install && typings install",
+    "start": "npm run gulp -- serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,40 +33,33 @@
   },
   "homepage": "https://github.com/kdupon/kdupon.github.io#readme",
   "devDependencies": {
-    "autoprefixer": "^6.1.2",
-    "babel-core": "6.3.15",
-    "babel-preset-es2015": "6.3.13",
-    "browser-sync": "^2.10.0",
+    "autoprefixer": "6.1.2",
+    "browser-sync": "2.10.0",
+    "conventional-changelog": "0.5.1",
+    "david": "7.0.0",
     "del": "2.2.0",
-    "ejs": "^2.3.4",
-    "fs-extra": "^0.26.2",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-csso": "^1.0.1",
-    "gulp-debug": "^2.1.2",
-    "gulp-file": "^0.2.0",
-    "gulp-flatten": "^0.2.0",
-    "gulp-footer": "^1.0.5",
+    "gulp": "gulpjs/gulp#6472219",
+    "gulp-bump": "1.0.0",
+    "gulp-file": "0.2.0",
+    "gulp-flatten": "0.2.0",
+    "gulp-footer": "1.0.5",
     "gulp-gh-pages": "0.5.4",
-    "gulp-header": "^1.7.1",
+    "gulp-header": "1.7.1",
     "gulp-load-plugins": "1.1.0",
-    "gulp-postcss": "^6.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-scss-lint": "^0.3.8",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "handlebars": "^4.0.5",
+    "gulp-postcss": "6.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.1.1",
+    "gulp-scss-lint": "0.3.8",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.5.1",
+    "gulp-util": "3.0.7",
     "jlg-toolkit": "geschwendt/jlg-toolkit",
-    "jspm": "^0.16.15",
-    "lodash": "^3.10.1",
-    "mq4-hover-shim": "^0.3.0",
-    "node-notifier": "^4.4.0",
-    "normalize.css": "^3.0.3",
-    "pesticide": "^1.3.1",
-    "semver": "^5.1.0",
-    "through2": "^2.0.0",
-    "yargs": "^3.31.0"
+    "jspm": "0.16.15",
+    "lodash": "3.10.1",
+    "mq4-hover-shim": "0.3.0",
+    "normalize.css": "3.0.3",
+    "typescript": "1.8.7",
+    "typings": "0.7.7"
   },
   "jspm": {
     "directories": {
