--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/jspm_packages/
 **/node_modules/
+**/typings/
 
 **/.publish/
 
@@ -13,6 +14,3 @@ tmp/
 
 .DS_Store
 npm-debug.log
-
-*.nupkg
-Package.nuspec
