--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,15 @@ collections:
     output: true
     permalink: /:categories/:year/:month/:day/:title
 
+defaults:
+  - scope:
+      path: ''
+      type: recipes
+    values:
+      layout: recipes
+      title: ''
+      image_path: ''
+
 helpers:
   empty_array: []
 
